# cpp_project_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
cmake/: FindLibUring.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/lib_template/: template.cpp
tests/: CMakeLists.txt  unit_test.cpp
